packages/yew-macro/tests/classes_macro/classes-fail.stderr
error: expected `,`
 --> $DIR/classes-fail.rs:7:20
  |
7 |     classes!("one" "two");
  |                    ^^^^^

error: string literals must not contain more than one class (hint: use `"two", "three"`)
  --> $DIR/classes-fail.rs:18:21
   |
18 |     classes!("one", "two three", "four");
   |                     ^^^^^^^^^^^

error[E0277]: the trait bound `Classes: From<{integer}>` is not satisfied
 --> $DIR/classes-fail.rs:4:14
  |
4 |     classes!(42);
  |              ^^ the trait `From<{integer}>` is not implemented for `Classes`
  |
  = help: the following implementations were found:
            <Classes as From<&'static str>>
            <Classes as From<&Option<T>>>
            <Classes as From<&String>>
            <Classes as From<&[T]>>
          and 4 others
  = note: required because of the requirements on the impl of `Into<Classes>` for `{integer}`

error[E0277]: the trait bound `Classes: From<{float}>` is not satisfied
 --> $DIR/classes-fail.rs:5:14
  |
5 |     classes!(42.0);
  |              ^^^^ the trait `From<{float}>` is not implemented for `Classes`
  |
  = help: the following implementations were found:
            <Classes as From<&'static str>>
            <Classes as From<&Option<T>>>
            <Classes as From<&String>>
            <Classes as From<&[T]>>
          and 4 others
  = note: required because of the requirements on the impl of `Into<Classes>` for `{float}`

error[E0277]: the trait bound `Classes: From<{integer}>` is not satisfied
 --> $DIR/classes-fail.rs:9:14
  |
9 |     classes!(vec![42]);
  |              ^^^ the trait `From<{integer}>` is not implemented for `Classes`
  |
  = help: the following implementations were found:
            <Classes as From<&'static str>>
            <Classes as From<&Option<T>>>
            <Classes as From<&String>>
            <Classes as From<&[T]>>
          and 4 others
  = note: required because of the requirements on the impl of `Into<Classes>` for `{integer}`
  = note: required because of the requirements on the impl of `From<std::vec::Vec<{integer}>>` for `Classes`
  = note: 1 redundant requirements hidden
  = note: required because of the requirements on the impl of `Into<Classes>` for `std::vec::Vec<{integer}>`

error[E0277]: the trait bound `Classes: From<{integer}>` is not satisfied
  --> $DIR/classes-fail.rs:13:14
   |
13 |     classes!(some);
   |              ^^^^ the trait `From<{integer}>` is not implemented for `Classes`
   |
   = help: the following implementations were found:
             <Classes as From<&'static str>>
             <Classes as From<&Option<T>>>
             <Classes as From<&String>>
             <Classes as From<&[T]>>
           and 4 others
   = note: required because of the requirements on the impl of `Into<Classes>` for `{integer}`
   = note: required because of the requirements on the impl of `From<Option<{integer}>>` for `Classes`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `Into<Classes>` for `Option<{integer}>`

error[E0277]: the trait bound `Classes: From<u32>` is not satisfied
  --> $DIR/classes-fail.rs:14:14
   |
14 |     classes!(none);
   |              ^^^^ the trait `From<u32>` is not implemented for `Classes`
   |
   = help: the following implementations were found:
             <Classes as From<&'static str>>
             <Classes as From<&Option<T>>>
             <Classes as From<&String>>
             <Classes as From<&[T]>>
           and 4 others
   = note: required because of the requirements on the impl of `Into<Classes>` for `u32`
   = note: required because of the requirements on the impl of `From<Option<u32>>` for `Classes`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `Into<Classes>` for `Option<u32>`

error[E0277]: the trait bound `Classes: From<{integer}>` is not satisfied
  --> $DIR/classes-fail.rs:16:21
   |
16 |     classes!("one", 42);
   |                     ^^ the trait `From<{integer}>` is not implemented for `Classes`
   |
   = help: the following implementations were found:
             <Classes as From<&'static str>>
             <Classes as From<&Option<T>>>
             <Classes as From<&String>>
             <Classes as From<&[T]>>
           and 4 others
   = note: required because of the requirements on the impl of `Into<Classes>` for `{integer}`
